<?xml version="1.0" encoding="utf-8"?>
<com.joysee.tvbox.settings.base.SettingsButtonPanel xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:joysee="http://schemas.android.com/apk/res/com.joysee.tvbox.settings"
    android:id="@+id/settings_panel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <com.joysee.tvbox.settings.main.SettingsButton
            android:id="@+id/btn_network"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            joysee:icon="@drawable/main_settings_network_connected"
            joysee:text="@string/main_button_network_connected" />

        <com.joysee.tvbox.settings.main.SettingsButton
            android:id="@+id/btn_images_sound"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            joysee:icon="@drawable/main_settings_images_sound"
            joysee:text="@string/main_button_image_sound" />

        <com.joysee.tvbox.settings.main.SettingsButton
            android:id="@+id/btn_apps"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            joysee:icon="@drawable/main_settings_apps"
            joysee:text="@string/main_button_apps" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <com.joysee.tvbox.settings.main.SettingsButton
            android:id="@+id/btn_common"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            joysee:icon="@drawable/main_settings_common"
            joysee:text="@string/main_button_common" />

        <com.joysee.tvbox.settings.main.SettingsButton
            android:id="@+id/btn_system_upgrade"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            joysee:icon="@drawable/main_settings_system_upgrade"
            joysee:text="@string/main_button_system_upgrade" />

        <com.joysee.tvbox.settings.main.SettingsButton
            android:id="@+id/btn_about"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            joysee:icon="@drawable/main_settings_about"
            joysee:text="@string/main_button_about" />
    </LinearLayout>

</com.joysee.tvbox.settings.base.SettingsButtonPanel>