<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:joysee="http://schemas.android.com/apk/res/com.joysee.tvbox.settings"
    xmlns:dvb="http://schemas.android.com/apk/res/com.joysee.tvbox.settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dvb_bg" >

    <com.joysee.tvbox.settings.base.SettingsTitleView
        android:id="@+id/settings_title_about_system_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        joysee:description="@string/carrier_name"
        joysee:text="@string/about_system_version" >
    </com.joysee.tvbox.settings.base.SettingsTitleView>

    <ScrollView
        android:id="@+id/scroll_view_about_system_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/about_scroll_view_margin_top"
        android:focusable="false"
        android:overScrollMode="always"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="@dimen/list_settings_item_width"
            android:layout_height="@dimen/about_scroll_view_height"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical" >

            <com.joysee.common.widget.JTextViewWithTTF
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/about_system_version_current"
                android:textSize="@dimen/text_size_view_item_name"
                dvb:ttf="fzltzh.TTF" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/about_scroll_view_divider_margin_top"
                android:background="@drawable/listex_divider"
                android:paddingBottom="-1dp" />

            <com.joysee.common.widget.JTextViewWithTTF
                android:id="@+id/text_about_system_version_current"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/about_scroll_view_text_margin_top"
                android:text="@string/about_system_version_current_description"
                android:textSize="@dimen/text_size_about_text_description"
                dvb:ttf="fzltzh.TTF" />

            <com.joysee.common.widget.JTextViewWithTTF
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/about_scroll_view_item_margin_top"
                android:text="@string/about_system_version_fix"
                android:textSize="@dimen/text_size_view_item_name"
                dvb:ttf="fzltzh.TTF" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/about_scroll_view_divider_margin_top"
                android:background="@drawable/listex_divider"
                android:paddingBottom="-1dp" />

            <com.joysee.common.widget.JTextViewWithTTF
                android:id="@+id/text_about_system_version_current_fix_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/about_scroll_view_text_margin_top"
                android:text="@string/about_system_version_fix_description"
                android:textSize="@dimen/text_size_about_text_description"
                dvb:ttf="fzltzh.TTF" />
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/content_check_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="visible" >

        <com.joysee.tvbox.settings.base.ProgressWheel
            android:id="@+id/progress_wheel"
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:layout_centerHorizontal="true"
            joysee:barColor="#007cff"
            joysee:barLength="60dp"
            joysee:barWidth="25dp"
            joysee:rimColor="#aaaaaa"
            joysee:rimWidth="25dp"
            joysee:spinSpeed="6dp"
            joysee:textColor="#007cff"
            joysee:textSize="36dp" />

        <com.joysee.common.widget.JTextViewWithTTF
            android:id="@+id/text_progress_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/progress_wheel"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="45dp"
            android:text="@string/about_system_version_check"
            android:textSize="24sp"
            dvb:ttf="fzltzh.TTF" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/update_check_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible" >

        <com.joysee.common.widget.JTextViewWithTTF
            android:id="@+id/text_update_check_result_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="45dp"
            android:text="@string/about_system_version_check"
            android:textSize="@dimen/text_size_view_update_result_string"
            dvb:ttf="fzltzh.TTF" />

        <com.joysee.common.widget.JTextViewWithTTF
            android:id="@+id/text_update_check_result_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_update_check_result_string"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/about_system_version_check"
            android:textSize="@dimen/text_size_view_update_result_version"
            dvb:ttf="fzltzh.TTF" />
    </RelativeLayout>

    <com.joysee.common.widget.JButtonWithTTF
        android:id="@+id/button_about_system_upgrade"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_below="@id/scroll_view_about_system_version"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/button_system_upgrade_margin_top"
        android:background="@drawable/button_system_upgrade"
        android:text="@string/about_system_version_check"
        android:textSize="@dimen/button_text_size"
        dvb:ttf="fzltch.TTF" />

</RelativeLayout>